corrected title spacing from breadcrumbs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8351,7 +8351,6 @@ img.game_header_image_full {
 	position: relative;
 	margin: 0px auto;
 	text-align: left;
-	padding-top: 7px;
 	min-height: 46px;
 }
 
